# gov_doc_parser

./: README.md  pyproject.toml
agent/: __init_.py  factory.py
config/: base.py
dependencies/: __init__.py  manager.py
document_processor/: __init__.py
models/: __init__.py  anthropic_model.py  base.py  openai_model.py
processors/: __init__.py  aadhaar.py  base.py  form16.py  pan.py
processors/data_classes/: __init__.py  aadhaar_back_dataclass.py  aadhaar_front_dataclass.py  form_16_dataclass.py  pan_dataclass.py
